--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,11 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+src/main/resources/static/js/APIKEY.js
 src/main/resources/application.properties
+
+
+
 ### STS ###
 .apt_generated
 .classpath
@@ -31,6 +35,5 @@ build/
 
 ### VS Code ###
 .vscode/
-
 
 
